Fix webkit scrollbars

--- a/frontend/src/assets/_layout.scss
+++ b/frontend/src/assets/_layout.scss
@@ -25,6 +25,7 @@
   max-height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
+  transform: translateZ(0);
 }
 
 .col-sidebar {
